[bug-fix]: make account page responsive on smaller devices
This commit brings a patch to make the accounts page look better
on smaller devices. This is by no means a proper fix. Ideally I'd
extract the components freemius sdk uses and make them responsive
with respective CSS and discard all ID based CSS codes. But that
is a task for another day. With this patch, the accounts page will
look good as long as there's no change in the HTML markup.

Fixes #453

Also squashing all 6 commits together so that the history remains
clean, but leaving the commit messages below for the record.

This is the 1st commit message:

[bug-fix]: make account page look better on mobile devices

I could not figure out the scss build process. So I just patched the css
file directly. Treat this as W.I.P. As soon as I figure out the scss
build, I will edit the relevant scss files.

This is the commit message #2:

[bug-fix]: fix accounts page mobile responsive view

Do the changes in the assets/scss/admin/account.scss file and build
it with globally installed sass. The next step would be to fix the
build scripts and have some sort of automation to make these tasks
easier in future.

Fixes #453

This is the commit message #3:

[fix]: use standard screen size in media query

Instead of the 520px, use a standard size 640px in the media query.
Also Make the tbody display as block too to take up the full
available width.

This is the commit message #4:

[fix]: value of max-width in accounts css

Since we are doing max-width, instead of mobile first
min-width, the value should be one less than the
standard size.

This is the commit message #5:

[revert]: discard changes to source css files

This prevents conflict on merging onto develop branch.

This is the commit message #6:

[fix]: format comments of source scss file per convention

--- a/assets/scss/admin/account.scss
+++ b/assets/scss/admin/account.scss
@@ -316,3 +316,63 @@ label.fs-tag
         width: 100%;
     }
 }
+
+// Fixes for issue 453.
+// Just a patch, ideally need to tweak the markup a bit to make it more
+// maintainable.
+@media screen and (max-width: 639px) {
+    #fs_account {
+        // Make the [Deactivate License ; Change Plan] action row come in next line.
+        .fs-header-actions {
+            position: static;
+            padding: 0 15px 12px 15px;
+            margin: 0 0 12px 0;
+
+            li {
+                float: none;
+                display: inline-block;
+            }
+        }
+
+        // Optimize the table view by making it appear as blocked instead of "table".
+        #fs_account_details {
+            display: block;
+
+            tbody, tr, td, th {
+                display: block;
+            }
+
+            tr {
+                td {
+                    &:first-child {
+                        text-align: left;
+                    }
+
+                    &:nth-child(2) {
+                        padding: 0 12px;
+                        code {
+                            margin: 0;
+                            padding: 0;
+                        }
+
+                        label {
+                            margin-left: 0;
+                        }
+                    }
+
+                    &:nth-child(3) {
+                        text-align: left;
+                    }
+                }
+
+                &.fs-field-plan {
+                    // Discard the float of the button group so that they appear on the next line.
+                    td:nth-child(2) .button-group {
+                        float: none;
+                        margin: 12px 0;
+                    }
+                }
+            }
+        }
+    }
+}
